Fixed Mobile Navigation
The close nav button is not aligned and animated more smoothly.

--- a/css/contactPage.less
+++ b/css/contactPage.less
@@ -51,6 +51,8 @@
   display: inline-block;
   border-radius: 0.50em;
   border: 1px solid @textGray;
+   position: absolute;
+   margin-top: -2em;
 }
 
 .radioBtnContainer{
@@ -61,7 +63,7 @@
 }
 
 input[type=radio]{
-  display: none;
+  opacity: 0;
 }
 
 label input[type=radio]:hover ~ *{
@@ -127,7 +129,7 @@ input[type=text]:focus{
       width: 100%;
     }
 
-    label, p {
+    label, p{
       font-size: 20px;
     }
 
