--- a/css/navigation.less
+++ b/css/navigation.less
@@ -33,9 +33,9 @@ nav{
 }
 
 .menuBar{
-  width: auto;
+  width: 3em;
   height: 0.50em;
-  border-radius: 1em;
+  border-radius: 0.10em;
   background-color: @white;
   margin: 0.25em;
 }
@@ -43,6 +43,11 @@ nav{
 #menuBar0Open{
   transform: rotate(45deg) translate(0.5em, 0.5em);
   transition: 0.25s linear;
+}
+
+#menuBar1Open{
+  visibility: hidden;
+  transition: visibility 0.25s linear;
 }
 
 #menuBar2Open{
@@ -53,6 +58,11 @@ nav{
 #menuBar0Closed{
   transform: rotate(0deg) translate(0em, 0em);
   transition: 0.25s linear;
+}
+
+#menuBar1Closed{
+  visibility: visible;
+  transition: visibility 0.25s linear;
 }
 
 #menuBar2Closed{
